Introduced database layer
Now using proxyquire to mock out the database layer for my supertest calls, so I don't need MongoDB running to run those tests. Along the way, I beefed up several tests and added new ones, since I can now stub and assert the output of the REST endpoints under test. I also have todo's to figure out if I need more input validation/filtering, beyond what swagger is providing.
